--- a/.github/workflows/start.yaml
+++ b/.github/workflows/start.yaml
@@ -2,3 +2,10 @@ on:
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron: "30 5,17 * * *"
+
+jobs:
+  test_schedule:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Every time
+        run: echo "This step will always run"
