--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,9 @@ on:
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron: "30 5,17 * * *"
+  push:
+    branches:
+      - main
 
 jobs:
   test_schedule:
