#patch update main workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,11 @@ on:
         description: "Environment to run tests against"
         type: environment
         required: true
+        options:
+          - dev
+          - testing
+          - staging
+          - production
 
 jobs:
   log-the-inputs:
