#patch update webhook workflow

--- a/.github/workflows/webhook.yml
+++ b/.github/workflows/webhook.yml
@@ -1,7 +1,8 @@
 name: "Test webhook"
 on:
-  workflow_dispatch:
-    type: webhook
+  respository_dispatch:
+    types:
+      - webhook
 
 jobs:
   log-the-inputs:
