--- a/.github/workflows/conditional.yml
+++ b/.github/workflows/conditional.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   hello-world:
-    if: github.repository == "learn-github-action"
+    if: github.repository == 'learn-github-action'
     runs-on: ubuntu-latest
     steps:
       - name: "Hello World"
